--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "nisu-koa2-sdk": "^1.0.8",
-    "nisusite-vue-deps": "^1.0.11"
+    "nisusite-vue-deps": "^1.0.11",
+    "vuex": "^3.0.1"
   },
   "engines": {
     "node": ">= 6.0.0",
