--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@position/nisu-components": "^1.0.4",
     "@position/nisu-koa2-sdk": "^1.0.9",
-    "@position/nisu-vue2-deps": "^1.0.13"
+    "@position/nisu-vue2-deps": "^1.0.13",
+    "jquery": "^3.3.1",
+    "vue-awesome-swiper": "^3.1.3"
   },
   "engines": {
     "node": ">= 6.0.0",
@@ -34,5 +36,7 @@
     "url": "https://github.com/BruceShang/vueMobileRem/issues"
   },
   "homepage": "https://github.com/BruceShang/vueMobileRem#readme",
-  "devDependencies": {}
+  "devDependencies": {
+    "vue-lazyload": "^1.2.6"
+  }
 }
